fix scrollbar to mozilla

--- a/src/css/global.css
+++ b/src/css/global.css
@@ -21,22 +21,27 @@
 }
 
 /* Works on Chrome, Edge, and Safari */
+* {
+  scrollbar-width: 16px;
+  scrollbar-color: var(--primary-medium) #ffffff;
+}
+
 body::-webkit-scrollbar {
-  width: 20px;
+  width: 16px;
 }
 
 body::-webkit-scrollbar-track {
-  background: var(--primary);
+  background: #ffffff;
 }
 
 body::-webkit-scrollbar-thumb {
-  background-color: var(--accent);
-  border-radius: 0px;
-  border: 3px solid var(--primary);
+  background-color: var(--primary-medium);
+  border-radius: 10px;
+  border: 3px solid #ffffff;
 }
 
 .modal-background::-webkit-scrollbar {
-  width: 20px;
+  width: 16px;
 }
 
 .modal-background::-webkit-scrollbar-track {
@@ -44,7 +49,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .modal-background::-webkit-scrollbar-thumb {
-  background-color: var(--primary);
+  background-color: var(--primary-medium);
   border-radius: 10px;
   border: 3px solid transparent;
   background-clip: padding-box;
